empty sub-controllers are decommissioned; processes dont print